# Pixelle

./: .gitignore  README.md  android.sh  backend.sh  ios.sh  r.py  rebrand.sh  run.sh  sc.sh  scaffold.sh  scaffold_nimbux.sh
Pixelle-Backend/crates/pixelle-analytics/: Cargo.toml
Pixelle-Backend/crates/pixelle-analytics/src/: events.rs  lib.rs  metrics.rs
Pixelle-Backend/crates/pixelle-auth/: Cargo.toml  README.md
Pixelle-Backend/crates/pixelle-auth/src/: auth_service.rs  config.rs  enhanced_auth_service.rs  jwt.rs  lib.rs  middleware.rs  passphrase.rs  password.rs  tests.rs
Pixelle-Backend/crates/pixelle-database/: Cargo.toml
Pixelle-Backend/crates/pixelle-database/src/: connection.rs  lib.rs  migrations.rs  models.rs  repository.rs
Pixelle-Backend/crates/pixelle-monitoring/: Cargo.toml
Pixelle-Backend/crates/pixelle-monitoring/src/: health.rs  metrics.rs  tracing.rs
Pixelle-Backend/services/api-gateway/: Cargo.toml  Dockerfile
Pixelle-Backend/services/api-gateway/src/: config.rs  handlers.rs  main.rs  routing.rs
Pixelle-Backend/services/auth-service/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
Pixelle-Backend/services/auth-service/examples/: qubit_integration.rs
Pixelle-Backend/services/auth-service/src/: main.rs  mock_repository.rs
Pixelle-Backend/services/feed-service/: Cargo.toml  Dockerfile
Pixelle-Backend/services/feed-service/src/: service.rs
Pixelle-Backend/services/legacy-bridge/: Cargo.toml
Pixelle-Backend/services/legacy-bridge/src/: main.rs
Pixelle-Backend/services/user-service/: Cargo.toml  Dockerfile
Pixelle-Backend/services/user-service/src/: main.rs  models.rs  service.rs
Qubit/Biomimeta/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  ULTRA_HIGH_RESOLUTION.md  add_copyright.sh  cortical_processing.md  lib.rs
Qubit/Biomimeta/bitstream_formatting/: mod.rs
Qubit/Biomimeta/cortical_processing/V1/: mod.rs  simple_cells.rs
Qubit/Biomimeta/cortical_processing/V3_V5/: depth_integration.rs  object_recognition.rs
Qubit/Biomimeta/examples/: advanced_cortical_areas.rs
Qubit/Biomimeta/experimental_features/: neuromorphic_acceleration.rs  synesthetic_processing.rs
Qubit/Biomimeta/medical_applications/: clinical_validation.rs  diagnostic_tools.rs  mod.rs
Qubit/Biomimeta/multi_modal_integration/: audio_visual_correlation.rs
Qubit/Biomimeta/perceptual_optimization/: quality_metrics.rs
Qubit/Biomimeta/performance_optimization/: benchmarking.rs  performance_optimizer.rs  real_time_processing.rs
Qubit/Biomimeta/real_time_adaptation/: performance_monitor.rs
Qubit/Biomimeta/retinal_processing/bipolar_cells/: lateral_inhibition.rs  mod.rs  spatial_filtering.rs
Qubit/Biomimeta/retinal_processing/ganglion_pathways/: parvocellular.rs
Qubit/Biomimeta/retinal_processing/photoreceptors/: mod.rs
Qubit/Biomimeta/src/streaming_engine/: mod.rs
Qubit/Biomimeta/src/testing_validation/: mod.rs
Qubit/Biomimeta/synaptic_adaptation/: mod.rs
Qubit/Biomimeta/ultra_high_resolution/: spatial_super_resolution.rs
Qubit/largetable/: Cargo.toml  README.md
Qubit/largetable/examples/: comprehensive_demo.rs
Qubit/largetable/src/: types.rs
Qubit/largetable/src/ai/: mod.rs
Qubit/largetable/src/config/: mod.rs
Qubit/largetable/src/document/: mod.rs
Qubit/largetable/src/drivers/: mod.rs
Qubit/largetable/src/engine/: auto_scaling.rs  connection_pool.rs  mod.rs
Qubit/largetable/src/observability/: mod.rs
Qubit/largetable/src/query/: mod.rs
Qubit/largetable/src/security/: mod.rs
Qubit/largetable/src/storage/: mod.rs
Qubit/nimbux/: Cargo.toml  README.md
Qubit/nimbux/examples/: nimbux_demo.rs  simple_client.rs
Qubit/nimbux/src/: errors.rs  lib.rs
Qubit/nimbux/src/auth/: jwt_auth.rs  mod.rs
Qubit/nimbux/src/cluster/: consensus.rs  load_balancer.rs  mod.rs  node.rs
Qubit/nimbux/src/durability/: mod.rs
Qubit/nimbux/src/metadata/: mod.rs
Qubit/nimbux/src/network/: http.rs  nimbux_api.rs
Qubit/nimbux/src/observability/: analytics.rs
Qubit/nimbux/src/performance/: async_io.rs
Qubit/nimbux/src/storage/: advanced.rs  ai_compression.rs  compression.rs  mod.rs
Qubit/nimbux/src/transfer/: parallel_upload.rs
Qubit/nimbux/src/utils/: io.rs
backup_20250903_030038/Pixelle-Backend/: Cargo.toml  README.md  docker-compose.yml
backup_20250903_030038/Pixelle-Backend/crates/pixelle-core/: Cargo.toml
backup_20250903_030038/Pixelle-Backend/crates/pixelle-legacy-compat/: Cargo.toml
largetable/: .gitignore  Cargo.toml  ENTERPRISE_FEATURES.md  ENTERPRISE_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md
largetable/examples/: basic_usage.rs  enterprise_example.rs
largetable/src/: error.rs  lib.rs  main.rs  types.rs
largetable/src/api/: mod.rs
largetable/src/config/: enterprise.rs  mod.rs
largetable/src/database/: mod.rs
largetable/src/distributed/: mod.rs
largetable/src/engine/: cache.rs  memory_manager.rs  mod.rs
largetable/src/index/: adaptive.rs  mod.rs
largetable/src/network/: async_server.rs  mod.rs
largetable/src/observability/: metrics.rs  mod.rs  tracing.rs
largetable/src/query/: mod.rs
largetable/src/tools/: main.rs
maintable/contrib/maintable_fdw/: Makefile  connection.c  deparse.c  maintable_fdw--1.0--1.1.sql  maintable_fdw--1.0.sql  maintable_fdw--1.1--1.2.sql  maintable_fdw.c  maintable_fdw.control  maintable_fdw.h  meson.build  option.c  shippable.c
nimbux/: Cargo.toml  README.md
nimbux/benches/: storage_bench.rs
nimbux/src/: lib.rs  main.rs
nimbux/src/auth/: mod.rs  token.rs
nimbux/src/cluster/: auto_scaler.rs  distributed_storage.rs  sharding.rs
nimbux/src/config/: mod.rs
nimbux/src/metadata/: object.rs  search_engine.rs
nimbux/src/network/: binary_protocol.rs  connection_pool.rs  mod.rs  s3_api.rs  simple_http.rs  tcp.rs
nimbux/src/observability/: metrics.rs  mod.rs
nimbux/src/performance/: connection_pool.rs  mod.rs
nimbux/src/security/: mod.rs
nimbux/src/storage/: compression.rs  content_addressable.rs  disk.rs  integrity.rs  memory.rs  mod.rs
nimbux/src/transfer/: mod.rs
nimbux/src/utils/: checksum.rs
nimbux/tests/: network_tests.rs
(+6795 files in other folders)
