[package]
name = "largetable"
version = "0.1.0"
edition = "2021"
authors = ["Neo Qiss"]
description = "Next-Generation Distributed NoSQL Database - Outperforming MongoDB"
license = "Proprietary"
readme = "README.md"

[lib]
name = "largetable"
crate-type = ["cdylib", "rlib"]  # For FFI bindings

[dependencies]
# === ASYNC RUNTIME & CONCURRENCY ===
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
crossbeam = "0.8"
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"

# === ZERO-COPY & HIGH-PERFORMANCE SERIALIZATION ===
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.9"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# === STORAGE ENGINES ===
rocksdb = "0.21"
sled = "0.34"
memmap2 = "0.9"
redb = "1.5"

# === COMPRESSION & HASHING ===
lz4 = "1.24"
zstd = "0.13"
snappy = "1.1"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# === NETWORKING ===
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
quinn = "0.10"  # QUIC protocol

# === SECURITY ===
ring = "0.17"
rustls = "0.22"
rustls-native-certs = "0.7"
webpki-roots = "0.26"
argon2 = "0.5"

# === INDEXING & SEARCH ===
tantivy = "0.21"  # Full-text search
hnsw = "0.11"     # Vector similarity search
roaring = "0.10"  # Bitmap indexes

# === TIME SERIES ===
arrow = "50.0"
parquet = "50.0"

# === GRAPH PROCESSING ===
petgraph = "0.6"

# === MONITORING & OBSERVABILITY ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.20"
metrics = "0.22"
prometheus = "0.13"

# === ERROR HANDLING ===
thiserror = "1.0"
anyhow = "1.0"
eyre = "0.6"

# === UTILITIES ===
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
lazy_static = "1.4"

# === CONFIGURATION ===
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
toml = "0.8"

# === SIMD & LOW-LEVEL OPTIMIZATIONS ===
wide = "0.7"
bytemuck = "1.14"

# === FFI BINDINGS ===
cbindgen = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.11"
cbindgen = "0.26"

# === MULTIPLE BINARIES ===
[[bin]]
name = "largetable"
path = "src/main.rs"

[[bin]]
name = "largetable-tools"
path = "src/tools/main.rs"

[[bin]]
name = "largetable-benchmark"
path = "src/tools/benchmark.rs"

# === BENCHMARKS ===
[[bench]]
name = "storage_engines"
harness = false
path = "benches/storage/mod.rs"

[[bench]]
name = "zero_copy_serde"
harness = false
path = "benches/serialization/zero_copy.rs"

[[bench]]
name = "query_engine"
harness = false
path = "benches/query/mod.rs"

[[bench]]
name = "network_performance"
harness = false
path = "benches/network/mod.rs"

# === BUILD PROFILES ===
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
opt-level = 3
debug = true

[profile.dev]
debug = true
opt-level = 0

# === FEATURES ===
[features]
default = ["document", "vector", "fulltext"]
document = []
graph = ["petgraph"]
timeseries = ["arrow", "parquet"]
vector = ["hnsw"]
fulltext = ["tantivy"]
simd = ["wide"]
jemalloc = []
