[package]
                                                                                                                                                                                                                                        name = "nimbux"
                                                                                                                                                                                                                                        version = "0.1.0"
                                                                                                                                                                                                                                        edition = "2021"
                                                                                                                                                                                                                                        authors = ["Neo Qiss"]
                                                                                                                                                                                                                                        description = "High-Performance Object Storage System"
                                                                                                                                                                                                                                        license = "Proprietary"

                                                                                                                                                                                                                                        [dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.0"
zstd = "0.13"
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
flate2 = "1.0"
lz4_flex = "0.11"
base64 = "0.21"

                                                                                                                                                                                                                                        [dev-dependencies]
                                                                                                                                                                                                                                        criterion = "0.5"

                                                                                                                                                                                                                                        [[bench]]
                                                                                                                                                                                                                                        name = "storage_bench"
                                                                                                                                                                                                                                        harness = false
                                                                                                                                                                                                                                        
