[package]
name = "largetable"
version = "0.1.0"
edition = "2021"
authors = ["Neo Qiss"]
description = "Next-Generation Distributed NoSQL Database - Outperforming MongoDB"
license = "Proprietary"
readme = "README.md"

[lib]
name = "largetable"
crate-type = ["cdylib", "rlib"]

[dependencies]
# === ASYNC RUNTIME & CONCURRENCY ===
tokio = { version = "1.0", features = ["full", "tracing"] }
async-trait = "0.1"
futures = "0.3"

# === SERIALIZATION ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.13", features = ["derive", "std"] }
bytecheck = "0.6"

# === STORAGE ENGINES ===
rocksdb = "0.21"
redb = "1.5"
petgraph = "0.6"

# === NETWORKING ===
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# === MONITORING & OBSERVABILITY ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# === ERROR HANDLING ===
thiserror = "1.0"
anyhow = "1.0"

# === UTILITIES ===
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
memmap2 = "0.9"
lz4-flex = "0.11"
rayon = "1.8"
num_cpus = "1.16"

# === ENTERPRISE FEATURES ===
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"

# === CONFIGURATION ===
config = "0.14"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

# === MULTIPLE BINARIES ===
[[bin]]
name = "largetable"
path = "src/main.rs"

# === BUILD PROFILES ===
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
debug = true
opt-level = 0

# === FEATURES ===
[features]
default = []