[package]
                                                                                                                                                                                                                                        name = "nimbux"
                                                                                                                                                                                                                                        version = "0.1.0"
                                                                                                                                                                                                                                        edition = "2021"
                                                                                                                                                                                                                                        authors = ["Neo Qiss"]
                                                                                                                                                                                                                                        description = "High-Performance Object Storage System"
                                                                                                                                                                                                                                        license = "Proprietary"

                                                                                                                                                                                                                                        [dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.5"
zstd = "0.13"
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
flate2 = "1.0"
lz4_flex = "0.11"
base64 = "0.21"
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde-xml-rs = "0.6"
jsonwebtoken = "9.0"
brotli = "3.3"
bzip2 = "0.4"
bincode = "1.3"
# Additional dependencies for enterprise features
rand = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
ring = "0.17"
rustls = "0.21"
rustls-pemfile = "1.0"
x509-parser = "0.15"
openssl = "0.10"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
toml = "0.8"
yaml-rust = "0.4"

                                                                                                                                                                                                                                        [dev-dependencies]
                                                                                                                                                                                                                                        criterion = "0.5"

                                                                                                                                                                                                                                        [[bench]]
                                                                                                                                                                                                                                        name = "storage_bench"
                                                                                                                                                                                                                                        harness = false
                                                                                                                                                                                                                                        
