[workspace]
resolver = "2"

members = [
    # Core services (the foundation)
    "services/user-service",
    "services/feed-service", 
    "services/content-service",
    "services/messaging-service",
    "services/social-service",
    "services/commerce-service",
    "services/analytics-service",
    "services/notification-service",
    "services/search-service",
    "services/media-processor",
    "services/realtime-gateway",
    "services/auth-service",
    
    # Infrastructure services
    "services/api-gateway",
    "services/file-storage",
    "services/cache-service", 
    "services/background-jobs",
    "services/monitoring-agent",
    
    # Legacy bridge (the necessary evil)
    "services/legacy-bridge",
    
    # Experimental services (where dreams go to die)
    "services/ai-content-generator",
    "services/quantum-stories",
    "services/blockchain-social",
    
    # Shared libraries
    "crates/pixelle-core",
    "crates/pixelle-database",
    "crates/pixelle-auth",
    "crates/pixelle-analytics",
    "crates/pixelle-media",
    "crates/pixelle-ml",
    "crates/pixelle-protocols",
    "crates/pixelle-monitoring",
    "crates/pixelle-legacy-compat",
    
    # Utilities and tools
    "tools/migration-runner",
    "tools/load-tester",
    "tools/schema-generator",
    "tools/chaos-monkey",
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Web frameworks
actix-web = "4.4"
axum = "0.7"
warp = "0.3"
tonic = "0.10"  # gRPC

# Serialization 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
diesel = { version = "2.1", features = ["postgres", "mysql", "r2d2", "chrono"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
redis = { version = "0.24", features = ["tokio-comp"] }
mongodb = "2.8"

# Message queues
rdkafka = "0.36"
lapin = "2.3"  # RabbitMQ
rumqttd = "0.18"  # MQTT

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
ring = "0.17"
rustls = "0.22"

# Monitoring & Observability  
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
opentelemetry = "0.21"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"

# Performance
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"

# Machine Learning (commented out for basic implementation)
# candle-core = "0.3"
# tch = "0.13"  # PyTorch bindings

# Media processing
ffmpeg-next = "6.0"
image = "0.24"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
split-debuginfo = "unpacked"
