[package]
name = "pixelle-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
pixelle-core = { path = "../pixelle-core" }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
ring = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }
uuid = { workspace = true }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Password strength analysis
zxcvbn = "2.0"

# Monitoring
tracing = { workspace = true }
