[package]
name = "pixelle-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
pixelle-core = { path = "../../crates/pixelle-core" }
pixelle-auth = { path = "../../crates/pixelle-auth" }
pixelle-database = { path = "../../crates/pixelle-database" }
pixelle-monitoring = { path = "../../crates/pixelle-monitoring" }
anyhow = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
