[package]
name = "pixelle-feed-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

# Internal crates
pixelle-core = { path = "../../crates/pixelle-core" }
pixelle-database = { path = "../../crates/pixelle-database" }
pixelle-ml = { path = "../../crates/pixelle-ml" }
pixelle-analytics = { path = "../../crates/pixelle-analytics" }

# Machine Learning for feed algorithm
candle-core = { workspace = true }
tch = { workspace = true }

# High-performance data structures
dashmap = { workspace = true }
rayon = { workspace = true }

# Message queues for real-time updates
rdkafka = { workspace = true }

# Caching
redis = { workspace = true }

# Database
sqlx = { workspace = true }
mongodb = { workspace = true }

# Time handling
chrono = { workspace = true }
uuid = { workspace = true }

# Monitoring
tracing = { workspace = true }
prometheus = { workspace = true }
