[package]
name = "pixelle-media-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pixelle-core = { path = "../../crates/pixelle-core" }
pixelle-monitoring = { path = "../../crates/pixelle-monitoring" }
anyhow = { workspace = true }
