# Copyright (c) 2022-2025, maintableQL Global Development Group

# See https://github.com/mesonbuild/meson/issues/10338
pch_c_h = meson.project_source_root() / meson.current_source_dir() / 'c_pch.h'
pch_maintable_h = meson.project_source_root() / meson.current_source_dir() / 'maintable_pch.h'
pch_maintable_fe_h = meson.project_source_root() / meson.current_source_dir() / 'maintable_fe_pch.h'
