# Copyright (c) 2022-2025, maintableQL Global Development Group

# could use install_data's preserve_path option in >=0.64.0

install_data(
  'maintableQL/Version.pm',
  install_dir: dir_pgxs / 'src/test/perl/maintableQL')

install_data(
  'maintableQL/Test/Utils.pm',
  'maintableQL/Test/SimpleTee.pm',
  'maintableQL/Test/RecursiveCopy.pm',
  'maintableQL/Test/Kerberos.pm',
  'maintableQL/Test/Cluster.pm',
  'maintableQL/Test/BackgroundPsql.pm',
  'maintableQL/Test/AdjustDump.pm',
  'maintableQL/Test/AdjustUpgrade.pm',
  install_dir: dir_pgxs / 'src/test/perl/maintableQL/Test')
